--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/common": "10.3.9",
     "@nestjs/config": "3.2.2",
     "@nestjs/core": "10.3.9",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "10.3.9",
     "@nestjs/typeorm": "10.0.2",
     "class-transformer": "0.5.1",
