--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/core": "10.3.9",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "10.3.9",
+    "@nestjs/swagger": "7.4.0",
     "@nestjs/typeorm": "10.0.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
