--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laurus-shop-api",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "author": "",
   "private": true,
@@ -26,46 +26,46 @@
     "migrate:rollback": "pnpm typeorm -d ./src/config/data-source.ts migration:revert"
   },
   "dependencies": {
-    "@nestjs/common": "10.3.9",
-    "@nestjs/config": "3.2.2",
-    "@nestjs/core": "10.3.9",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "10.3.9",
-    "@nestjs/swagger": "7.4.0",
+    "@nestjs/common": "10.4.4",
+    "@nestjs/config": "3.2.3",
+    "@nestjs/core": "10.4.4",
+    "@nestjs/mapped-types": "2.0.5",
+    "@nestjs/platform-express": "10.4.4",
+    "@nestjs/swagger": "7.4.2",
     "@nestjs/typeorm": "10.0.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
-    "pg": "8.12.0",
+    "pg": "8.13.0",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.1",
     "typeorm": "0.3.20"
   },
   "devDependencies": {
-    "@commitlint/cli": "19.3.0",
-    "@commitlint/config-conventional": "19.2.2",
-    "@nestjs/cli": "10.3.2",
-    "@nestjs/schematics": "10.1.1",
-    "@nestjs/testing": "10.3.9",
+    "@commitlint/cli": "19.5.0",
+    "@commitlint/config-conventional": "19.5.0",
+    "@nestjs/cli": "10.4.5",
+    "@nestjs/schematics": "10.1.4",
+    "@nestjs/testing": "10.4.4",
     "@types/express": "4.17.21",
-    "@types/jest": "29.5.12",
-    "@types/node": "20.14.2",
+    "@types/jest": "29.5.13",
+    "@types/node": "20.16.11",
     "@types/supertest": "6.0.2",
-    "@typescript-eslint/eslint-plugin": "7.13.0",
-    "@typescript-eslint/parser": "7.13.0",
-    "eslint": "8.57.0",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
+    "eslint": "8.57.1",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-prettier": "5.1.3",
-    "husky": "9.0.11",
+    "eslint-plugin-prettier": "5.2.1",
+    "husky": "9.1.6",
     "jest": "29.7.0",
-    "lint-staged": "15.2.7",
-    "prettier": "3.3.2",
+    "lint-staged": "15.2.10",
+    "prettier": "3.3.3",
     "source-map-support": "0.5.21",
     "supertest": "7.0.0",
-    "ts-jest": "29.1.4",
+    "ts-jest": "29.2.5",
     "ts-loader": "9.5.1",
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.4.5"
+    "typescript": "5.6.3"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -83,5 +83,6 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "packageManager": "pnpm@9.11.0"
 }
