--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,6 @@
-version: '3.9'
-
 services:
   db:
-    image: postgres:15.7
+    image: postgres:16.4
     restart: always
     ports:
       - '${DB_PORT}:${DB_PORT}'
@@ -12,4 +10,4 @@ services:
       POSTGRES_USER: ${DB_USER}
     container_name: laurus-777-db
     volumes:
-      - ./db:/var/lib/postgresql/data
+      - ${DB_PATH_VOLUME}:/var/lib/postgresql/data
