--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
     "migrate:rollback": "pnpm typeorm -d ./src/config/data-source.ts migration:revert"
   },
   "dependencies": {
-    "@nestjs/common": "10.4.4",
-    "@nestjs/config": "3.2.3",
-    "@nestjs/core": "10.4.4",
+    "@nestjs/common": "10.4.6",
+    "@nestjs/config": "3.3.0",
+    "@nestjs/core": "10.4.6",
     "@nestjs/mapped-types": "2.0.5",
-    "@nestjs/platform-express": "10.4.4",
-    "@nestjs/swagger": "7.4.2",
+    "@nestjs/platform-express": "10.4.6",
+    "@nestjs/swagger": "8.0.0",
     "@nestjs/typeorm": "10.0.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
-    "pg": "8.13.0",
+    "pg": "8.13.1",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.1",
     "typeorm": "0.3.20"
@@ -43,18 +43,21 @@
   "devDependencies": {
     "@commitlint/cli": "19.5.0",
     "@commitlint/config-conventional": "19.5.0",
+    "@eslint/eslintrc": "3.1.0",
+    "@eslint/js": "9.13.0",
     "@nestjs/cli": "10.4.5",
-    "@nestjs/schematics": "10.1.4",
-    "@nestjs/testing": "10.4.4",
-    "@types/express": "4.17.21",
-    "@types/jest": "29.5.13",
-    "@types/node": "20.16.11",
+    "@nestjs/schematics": "10.2.3",
+    "@nestjs/testing": "10.4.6",
+    "@types/express": "5.0.0",
+    "@types/jest": "29.5.14",
+    "@types/node": "22.8.2",
     "@types/supertest": "6.0.2",
-    "@typescript-eslint/eslint-plugin": "7.18.0",
-    "@typescript-eslint/parser": "7.18.0",
-    "eslint": "8.57.1",
+    "@typescript-eslint/eslint-plugin": "8.12.0",
+    "@typescript-eslint/parser": "8.12.0",
+    "eslint": "9.13.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
+    "globals": "15.11.0",
     "husky": "9.1.6",
     "jest": "29.7.0",
     "lint-staged": "15.2.10",
@@ -83,6 +86,5 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  },
-  "packageManager": "pnpm@9.12.1"
+  }
 }
