--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "passport": "0.7.0",
+    "passport-google-oauth20": "2.0.0",
     "passport-jwt": "4.0.1",
     "pg": "8.13.1",
     "reflect-metadata": "0.2.2",
@@ -57,6 +58,7 @@
     "@types/express": "5.0.0",
     "@types/jest": "29.5.14",
     "@types/node": "22.8.2",
+    "@types/passport-google-oauth20": "2.0.16",
     "@types/passport-jwt": "4.0.1",
     "@types/supertest": "6.0.2",
     "@typescript-eslint/eslint-plugin": "8.12.1",
@@ -93,5 +95,11 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "overrides": {
+    "are-we-there-yet": "4.0.2",
+    "gauge": "5.0.2",
+    "npmlog": "7.0.1",
+    "rimraf": "6.0.1"
   }
 }
