refactor: .env.example modified

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DB_HOST = localhost
-DB_NAME = laurus_777_db
-DB_USER = admin
+DB_NAME = name_db
+DB_USER = postgres
 DB_PASSWORD = 123456
 DB_PORT= 5432
 DB_PROVIDER = postgres
@@ -8,11 +8,26 @@ DB_PROVIDER = postgres
 PORT=3001
 HOST_API=http://localhost:3001/api
 
+# JWT 
 JWT_SECRET = secret123456789
+JWT_EXPIRE_IN = 1d
 
-CLOUDINARY_UPLOAD_PRESET=laurus_777_shop
-CLOUDINARY_CLOUD_NAME=mystoreforprojects
-CLOUDINARY_API_KEY=577683724719432
-CLOUDINARY_API_SECRET=WzXQRP-044kZi-hxekPyAZ7Rb-I
+REFRESH_JWT_SECRET = refreshSecret123456789
+REFRESH_JWT_EXPIRE_IN = 30d
+
+# cloudinary
+CLOUDINARY_UPLOAD_PRESET=name_preset
+CLOUDINARY_CLOUD_NAME=cloud_name
+CLOUDINARY_API_KEY=cloud_key
+CLOUDINARY_API_SECRET=cloud_secret
+
+# google
+# https://console.cloud.google.com/apis/credentials?project=laurus-777-shop
+CLIENT_ID = 83838383838x
+CLIENT_SECRET = 88777878sswssss
+CALLBACK_URL = http://localhost:3001/api/auth/google/callback
+
+# url frontend callback
+REDIRECT_AUTH_TOKEN=myUrlFront.com
 
 environment= dev
